Fixed google button not aligning right

--- a/assets/component-totals.css
+++ b/assets/component-totals.css
@@ -40,6 +40,10 @@
      margin-top: 2rem;
 }
 
+.cart__ctas .shopify-cleanslate > div > ul {
+     margin: 0 !important;
+}
+
 .cart__ctas .shopify-cleanslate li[data-testid="grid-cell"] {
      margin: 0 !important;
 }
